--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,3 +1,9 @@
+.topSection {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .heading2Xl {
   font-size: 2.5rem;
   line-height: 1.2;
